// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Error renders correctly 1`] = `
<div
  class="ecl-message ecl-message--error"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--error"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Error message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message Info renders correctly 1`] = `
<div
  class="ecl-message ecl-message--info"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--information"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Information message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message Info renders correctly with extra attributes 1`] = `
<div
  class="ecl-message ecl-message--info"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--information"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Information message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message Info renders correctly with extra class names 1`] = `
<div
  class="ecl-message ecl-message--info custom-button custom-button--test"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--information"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Information message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message Success renders correctly 1`] = `
<div
  class="ecl-message ecl-message--success"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--success"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Success message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message Warning renders correctly 1`] = `
<div
  class="ecl-message ecl-message--warning"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--warning"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Warning message
    </div>
    <p
      class="ecl-message__description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
    </p>
  </div>
</div>
`;

exports[`Message with validation enabled and missing input data returns the right warning message 1`] = `
<div
  class="ecl-message ecl-message--info"
  data-ecl-auto-init="Message"
  data-ecl-message=""
  role="alert"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--l ecl-message__icon"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--information"
    />
  </svg>
  <div
    class="ecl-message__content"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-message__close"
      data-ecl-message-close=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Close
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--close"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-message__title"
    >
      Information message
    </div>
    <p
      class="ecl-message__description"
    />
  </div>
</div>
`;
